fix card wrap + add hover + transition

--- a/src/Styles/AnimeList/animeList.scss
+++ b/src/Styles/AnimeList/animeList.scss
@@ -96,6 +96,7 @@
 
 .card__wrap {
   position: relative;
+  transition: all .2s ease-in-out;
 }
 
 .poster {
@@ -141,15 +142,16 @@
 
 //card img
 .card__img {
+  display: block;
   object-fit: fill;
   width: 100%;
   height: 355px;
   transition: all .2s ease-in-out;
+}
 
-  &:hover {
-    transform: translateY(-1rem);
-    box-shadow: 0 0 30px 2px rebeccapurple;
-  }
+.card__wrap:hover {
+  transform: translateY(-1rem);
+  box-shadow: 0 0 30px 2px rebeccapurple;
 }
 
 //btn
